force-app/main/default/objects/LPOE_Space_Plan__c/fields/VACIS_Default__c.field-meta.xml
<CustomField>
    <fullName>VACIS_Default__c</fullName>
    <defaultValue>0</defaultValue>
    <description>VACIS Default</description>
    <inlineHelpText>VACIS Default</inlineHelpText>
    <label>VACIS Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>