force-app/main/default/objects/LPOE_Space_Plan__c/fields/Vehicle_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Breakdown__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Vehicle Breakdown</description>
    <inlineHelpText>Vehicle Breakdown</inlineHelpText>
    <label>Vehicle Breakdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>