force-app/main/default/objects/LPOE_Space_Plan__c/fields/Vehicular_paving__c.field-meta.xml
<CustomField>
    <fullName>Vehicular_paving__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vehicular paving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>